--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,29 @@ annotated-types==0.7.0
 anyio==4.12.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+certifi==2025.11.12
 cffi==2.0.0
 click==8.3.1
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.124.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 Mako==1.3.10
 MarkupSafe==3.0.3
+packaging==25.0
+pluggy==1.6.0
 pwdlib==0.3.0
 pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==9.0.2
 python-dotenv==1.2.1
 python-multipart==0.0.20
 SQLAlchemy==2.0.44
